# NP-01_Vollibrespot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
scripts/: build.sh  deploy.sh  image.sh  restore.sh
src/: meta_pipe.rs
