[package]
name = "vollibrespot"
version = "0.2.5-phts-np-01.2"
authors = ["ashthespy <https://github.com/ashthespy/>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "vollibrespot"
path = "src/main.rs"
doc = false

[dependencies]
env_logger =  {version = "0.7", default-features = false, features = ["termcolor","humantime","atty"]}
futures = "0.1"
getopts = "0.2"
hyper = "0.12"
log = "0.4"
tokio = "0.1"
tokio-signal = "0.2"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.8"
hex = "0.4"
toml = "0.5"

[dependencies.librespot]
# for local development:
# clone NP-01_librespot into current folder
# path = "./NP-01_librespot"
# for release:
git = "https://github.com/phts/NP-01_librespot.git"
rev = "9e4507324b9165804eb5afc588ac9e27acdac537"
default-features = false
features = ["alsa-backend"]

[build-dependencies]
vergen = "3.0.4"
